samples/_failures_safe/1761488042_f3c8e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6c91337.c: In function ‘main’:
./samples/SAFE/__tmp_b6c91337.c:143:33: error: ‘uint8’ undeclared (first use in this function); did you mean ‘uint8_t’?
  143 |     if (!decompress_data(&ctx, (uint8
      |                                 ^~~~~
      |                                 uint8_t
./samples/SAFE/__tmp_b6c91337.c:143:33: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b6c91337.c:143:38: error: expected ‘)’ at end of input
  143 |     if (!decompress_data(&ctx, (uint8
      |                                ~     ^
      |                                      )
./samples/SAFE/__tmp_b6c91337.c:143:10: error: too few arguments to function ‘decompress_data’
  143 |     if (!decompress_data(&ctx, (uint8
      |          ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b6c91337.c:112:5: note: declared here
  112 | int decompress_data(const struct CompressionContext *ctx, uint8_t *output, size_t output_size) {
      |     ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b6c91337.c:143:5: error: expected declaration or statement at end of input
  143 |     if (!decompress_data(&ctx, (uint8
      |     ^~
